# browser-ai

./: .gitignore  BROWSER_INTEGRATION.md  BUILD_CHROME.md  CAPABILITIES.md  CHROME_INTEGRATION_STATUS.md  CHROME_TEST_INSTRUCTIONS.md  CHROME_WEBUI_STATUS.md  CHROMIUM_INTEGRATION.md  CLAUDE.md  CURRENT_STATUS.md  FOUNDATIONAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  LAYER2_COMPLETE.md  LAYER3_TESTING.md  MILESTONE.md  OLLAMA_FIX.md  OPTION_A_COMPLETE.md  PROVIDERS.md  QUICKSTART.md  README.md  RUN_THIS_DEMO.bat  STATUS.md  SUCCESS.md  TESTING.md  TESTS.md  TEST_E2E_FULL.md  TEST_RESULTS.md  WEBUI_REGISTRATION.md  demo_auto.py  demo_simple.py  patch-chromium.py  run_demo.bat  sync-from-chromium.sh  sync-to-chromium.sh  test_ai_full.py  test_ai_notepad.py  test_ai_simple.py  test_json_parse.py  test_ollama_debug.py  (+4 more)
ai_panel/: ai_panel_handler.cc  ai_panel_ui.cc
ai_panel/resources/: ai_panel.css  ai_panel.js
automation_service/: CMakeLists.txt  README.md  SETUP.md  build.bat  manifest.json.in  register-manifest.bat  test-service.bat  test_automation.py  test_dramatic.py  test_mouse_move.py  test_new_handlers.py  test_ping.py  test_simple.py
automation_service/src/: action_executor.cpp  action_executor.h  ai_provider.cpp  ai_provider.h  async_request.cpp  async_request.h  common.h  credential_store.cpp  credential_store.h  http_client.cpp  http_client.h  input_controller.cpp  input_controller.h  main.cpp  native_messaging.cpp  native_messaging.h  screen_capture.cpp  screen_capture.h  ui_automation.cpp  ui_automation.h
backend/: .env  README.md  env-template.txt  requirements.txt  server.py  setup.bat  start.bat  start_ollama.bat  test_backend.py  test_e2e.py  test_ollama_connection.py  test_ollama_simple.py
backend/tests/: conftest.py  test_api.py  test_rate_limit.py  test_validation.py
docs/plans/: 2026-01-28-side-panel-integration.md  2026-01-29-eliminate-python-backend-impl.md  2026-01-29-eliminate-python-backend.md  2026-01-29-production-hardening.md
src/chrome/browser/ui/views/side_panel/ai_panel/: ai_panel_side_panel_coordinator.cc  ai_panel_side_panel_coordinator.h
src/chrome/browser/ui/webui/ai_panel/: BUILD.gn  ai_panel_handler.cc  ai_panel_handler.h  ai_panel_ui.cc  ai_panel_ui.h
src/chrome/browser/ui/webui/ai_panel/resources/: ai_panel.css  ai_panel.html  ai_panel.js  ai_provider_interface.js  ai_provider_manager.js  anthropic_provider.js  local_llm_provider.js  native_messaging_helper.js  ollama_provider.js  openai_provider.js
test/: DEMO.md  README.md  debug-demo.html  demo_chrome_navigation.py  demo_steam_dota.py  layer1-test.html  open-test.bat  run-test-server.sh  simple-demo.html  test_ai_automation.py  test_screen_ui.py  test_smart_clicking.py  test_ui_tree.json
