# Copyright 2025 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chrome_build.gni")

assert(!is_android)

# AI Panel WebUI implementation
source_set("ai_panel") {
  sources = [
    "ai_panel_handler.cc",
    "ai_panel_handler.h",
    "ai_panel_ui.cc",
    "ai_panel_ui.h",
  ]

  deps = [
    "//base",
    "//chrome/browser/profiles:profile",
    "//chrome/browser/ui",
    "//chrome/common",
    "//content/public/browser",
    "//content/public/common",
  ]

  # Resources are defined in chrome/browser/browser_resources.grd
}

